--- a/style.css
+++ b/style.css
@@ -43,10 +43,8 @@ h1 {
 }
 
 button {
+  font-family: inherit;
   font-size: 1rem;
-  font-family: "JetBrains Mono", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
-    sans-serif;
   height: 50px;
   width: 200px;
   margin: 0.5rem;
